[project]
name = "concrete-registration-toolkit"
version = "0.1.0"
description = "A registration toolkit developed for ÚJV Řež a.s."
authors = [
    {name = "Erik Leclercq",email = "rkleclercq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
    "numpy (>=2.0.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "json5 (>=0.12.1,<0.13.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "circle-fit (>=0.2.1,<0.3.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "noise (>=1.2.2,<2.0.0)",
    "mudic @ git+https://github.com/eriqleclercq/muDIC.git"
]

[tool.poetry]
packages = [
  { include = "concrete_registration_toolkit", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project.scripts]
crt-pre-processing = "concrete_registration_toolkit.data_preprocessing.__main__:main"
crt-video-processing = "concrete_registration_toolkit.video_processing.__main__:main"
crt-video-register = "concrete_registration_toolkit.video_registration.__main__:main"
crt-image-fusion = "concrete_registration_toolkit.image_fusion.__main__:main"
